Nuevo cv - cel quitado - twitter add

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <br> <br>
                 He trabajado en proyectos relacionados a sistemas de registros, sistemas estadísticos y proyectos de empresas grandes con distintas tecnologías web, demostrando mi capacidad de adaptación, grado de responsabilidad y calidad en la comunicación al realizar un trabajo</p>
                     <br>
-                <a href="https://drive.google.com/file/d/16oi92yO2i1EQjVD1W2sfdx748wdUy-01/view?usp=sharing" target="_blank">
+                <a href="https://drive.google.com/file/d/17CJY0w_YyvcvMv_ixag57SHkCpEvIxLc/view?usp=sharing" target="_blank">
                     <button class="boton-amarillo">Descargar CV</button>
                 </a>
             </section>
@@ -120,11 +120,11 @@
                     <a class="letra-gris">
                         <i class="fa-solid fa-at letra-oro">&nbsp; &nbsp;</i>Jandresi.alvarez@gmail.com
                     </a>
-                    <a href="https://wa.link/e6i1c8" target="_blank" class="letra-gris">
-                        <i class="fa-brands fa-whatsapp letra-oro">&nbsp; &nbsp;</i>+57 3104995188
-                    </a>
                     <a href="https://linkedin.com/in/jorge-andrés-silva-álvarez-59b820205" target="_blank" class="letra-gris">
                         <i class="fa-brands fa-linkedin letra-oro">&nbsp; &nbsp;</i>Jorge Andrés Silva Álvarez
+                    </a>
+                    <a href="https://twitter.com/SilvaEnHTML" target="_blank" class="letra-gris">
+                        <i class="fa-brands fa-twitter letra-oro">&nbsp; &nbsp;</i>@SilvaEnHTML
                     </a>
                 </section>
             </div>
