--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <h2 class="letra-gris">Desarrollador Web & Freelancer</h2>
             </section>
             <section class="inicio_imagen">
-                <img src="img/Foto-sonriendo6.png" alt="Jorge Andres Silva">
+                <img src="img/foto_2023_min.png" alt="Jorge Andres Silva">
             </section>
         </article>
 
