Se cambia foto por webp y se actualiza hv pdf

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <h2 class="letra-gris">Desarrollador Web & Freelancer</h2>
             </section>
             <section class="inicio_imagen">
-                <img src="img/foto_2023_min.png" alt="Jorge Andres Silva">
+                <img src="img/foto_2023.webp" alt="Jorge Andres Silva">
             </section>
         </article>
 
@@ -38,10 +38,10 @@
             </section>
             <section class="about_descripcion letra-gris">
                 <p>Soy Jorge Andrés Silva, tecnólogo en sistemas de información con experiencia en desarrollo web orientado a la creación de interfaces funcionales y atractivas que permitan una correcta experiencia de usuario.
-                    <br> <br>
+                <br> <br>
                 He trabajado en proyectos relacionados a sistemas de registros, sistemas estadísticos y proyectos de empresas grandes con distintas tecnologías web, demostrando mi capacidad de adaptación, grado de responsabilidad y calidad en la comunicación al realizar un trabajo</p>
-                    <br>
-                <a href="https://drive.google.com/file/d/12hxbakjCK885K8uqyc1gq1YEYawJkC7-/view?usp=sharing" target="_blank">
+                <br>
+                <a href="https://drive.google.com/file/d/13QiOZMnyVs29oy2K5Y5scJgPgSOn1xDz/view?usp=drive_link" target="_blank">
                     <button class="boton-amarillo">Descargar CV</button>
                 </a>
             </section>
